# mentu-calendar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
conformance/: run.py
conformance/vectors/cancel_event_plan/: 000_tombstone.json  001_single_occurrence.json  002_span_all.json
conformance/vectors/check_availability/: 000_basic.json  001_touching_coalesce.json  002_empty_events.json  003_cancelled_no_occupy.json  004_free_no_occupy.json  005_tentative_default.json  006_tentative_as_busy.json  007_zero_length.json  008_err_bad_interval.json  009_busy_clipped_to_window.json
conformance/vectors/create_event_plan/: 000_basic.json  001_idem_reordered.json  002_selected_slot.json  003_reject_on_conflict.json  004_idem_explicit_default.json  005_err_missing_dst.json  006_err_missing_draft_tz.json  007_err_draft_end_before_start.json
conformance/vectors/detect_conflicts/: 000_touching_none.json  001_overlap_one.json  002_three_events.json  003_cancelled_excluded.json  004_window_clip.json  005_empty.json
conformance/vectors/expand_recurrence/: 000_daily_count3.json  001_weekly_byday.json  002_monthly_bymonthday31.json  003_monthly_2nd_tuesday.json  004_monthly_last_weekday_bysetpos.json  005_yearly.json  006_interval2_daily.json  007_until.json  008_exdate.json  009_window_clip.json  010_limit.json  011_override_replace.json  012_override_cancel.json  013_dst_spring_daily.json  014_err_unbounded.json  015_err_missing_dst.json  016_err_override_end_before_start.json  (+4 more)
docs/: ADOPTING.md
scripts/: gen_vectors.py
spec/: SPEC.md
spec/schemas/: cancel_event_plan.schema.json  check_availability.schema.json  expand_recurrence.schema.json  next_occurrence.schema.json  reschedule_event_plan.schema.json
src/mentu_calendar/: __init__.py  __main__.py  canonical.py  dispatch.py  errors.py  intervals.py  mcp.py  meta.py  recurrence.py  temporal.py  tz.py
tests/: test_conformance.py  test_hardening.py  test_mcp.py  test_properties.py  test_reference_crosscheck.py
(+112 files in other folders)
