[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mentu-calendar"
dynamic = ["version"]
description = "Deterministic, offline, host-independent calendar scheduling engine (RFC 5545 + IANA tzdata)."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Rashid Azarang", email = "rashid.azarang.eg@gmail.com" }]
keywords = ["calendar", "scheduling", "rfc5545", "recurrence", "timezone", "availability", "deterministic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Scheduling",
  "Typing :: Typed",
]
dependencies = [
  "python-dateutil>=2.9",
  "tzdata==2025.2",
]

[project.urls]
Homepage = "https://github.com/mentu-ai/mentu-calendar"
Repository = "https://github.com/mentu-ai/mentu-calendar"
Issues = "https://github.com/mentu-ai/mentu-calendar/issues"

[project.scripts]
mentu-calendar = "mentu_calendar.__main__:main"
mentu-calendar-mcp = "mentu_calendar.mcp:main"

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "pip-audit>=2.7"]

[tool.hatch.version]
path = "src/mentu_calendar/meta.py"
pattern = 'ENGINE_VERSION = "(?P<version>[^"]+)"'

[tool.hatch.build.targets.wheel]
packages = ["src/mentu_calendar"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["E501"]  # line length is owned by the formatter

[tool.ruff.lint.per-file-ignores]
"scripts/gen_vectors.py" = ["E731", "E402", "B007"]  # dev data-generation script

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
